--- a/Lost Puppy Finder/style.css
+++ b/Lost Puppy Finder/style.css
@@ -1,12 +1,34 @@
-
-/* .fundo_cor{
-    background-color: aquamarine;
+body{
+    font-family: 'Courier New', Courier, monospace;
 }
-.fundo_principal{
-    background-color: black;
-} */
+header{
+    background-color: rgb(128, 128, 128);
+    height: 150px;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+h1{
+    text-align: center;
+    height: 40px;
+    width: 500px;
+    font-size: 50px;
+    background-color: white;
+    border-radius: 25px;
+    text-shadow: 2px 6px 4px ;
+    padding: 20px;
+    margin: 10px;
+    border: 2px solid black;
+    }
+h1:hover{
+    transform: scale(1.1);
+}
+main{
+    background-color: aqua;
+}
 
-#cor_fundo{
-    background-color: brown;
+main > #conterner{
+    background-color: aqua;
+  
 }
 
